--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -51,6 +51,7 @@ body{
   font-family: sans-serif;
   font-weight: 600;
   line-height: 50px;
+  display: block;
 }
 
 .navbar-default .navbar-brand:hover{
