--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -273,9 +273,9 @@ clip-path: polygon(0 0, 100% 0, 100% 49%, 50% 100%, 0% 50%);
   text-align: center;
   height: 150px;
   border-radius: 5px;
-  background-color: rgba(242, 200, 8, .9);
-  border: 2px solid #103967;
-  
+  background:linear-gradient(#F09819, #EDDE5D);
+  border: 2px solid #FFC837;
+  color: #000;
 }
 
 .category img{
@@ -302,6 +302,22 @@ clip-path: polygon(0 0, 100% 0, 100% 49%, 50% 100%, 0% 50%);
   padding-top:20px;
   padding-bottom: 20px;
 }
+
+.thumbnail a{
+  text-decoration: none;
+}
+
+.thumb-galeri{
+  width:100%;
+  min-height:200px;
+  padding:0;
+  cursor:pointer;
+}
+
+.thumb-galeri img{
+  height:200px;
+}
+
 
 .row{
   display: -webkit-box;
